# ECE4301_Fall2025

Group A/: aes_evp.c  readme.md
Group A/Final_Project/: GroupA_Project_Vision_Nov3.pptx
Group A/Midterm1/: .gitignore  README.md
Group A/Midterm1/rpi-secure-stream/: Cargo.toml
Group A/Midterm1/rpi-secure-stream/src/: lib.rs  logutil.rs  main.rs  metrics.rs
Group A/Midterm1/rpi-secure-stream/src/crypto/: ecdh.rs  mod.rs  rsa_kem.rs
Group A/Midterm1/rpi-secure-stream/src/net/: aead_stream.rs  mod.rs  transport.rs
Group A/Midterm1/rpi-secure-stream/src/video/: mod.rs  receiver.rs  sender.rs
Group A/Midterm1/setup/: leader_demo.sh  leader_pi_setup.sh  listener_demo.sh  listener_pi_setup.sh
Group A/Quiz_1/: Quiz 1 Slides Corrected.pptx  Quiz 1 Slides.pptx  benchmarks_crypto.c  engine_stub.c  engine_stub.h  sha256_bench.c
Group A/Quiz_1/demonstration_files/: aes_afalg  aes_afalg.c  aes_evp  aes_results.csv  run_aes_bench_cpu.sh
Group A/demonstration_files/: Makefile  aes_pure  aes_pure.c
Group B/: README.md
Group B/Final_Project/: 4301 Final Project_ Sparkle Algorithm Benchmarking.pptx
Group B/Midterm/: Algorithm.md  README.md
Group B/Midterm/Demo/: README.md
Group B/Midterm/data/: handshake_ecdh.csv  steady_ecdh.csv  steady_rsa.csv  summary.csv
Group B/Midterm/source_code/: Cargo.toml  Phase2_HardwareCrypto_Report.txt  README.md  handshake_rsa.csv  instrcutions.txt  plot_results.py
Group B/Midterm/source_code/app/: Cargo.toml
Group B/Midterm/source_code/app/src/: common.rs  main.rs
Group B/Midterm/source_code/keying/: Cargo.toml
Group B/Midterm/source_code/keying/examples/: handshake_demo.rs
Group B/Midterm/source_code/keying/src/: lib.rs  rsa.rs
Group B/Midterm/source_code/metrics/: Cargo.toml
Group B/Midterm/source_code/metrics/src/: handshake_logger.rs  lib.rs
Group B/Midterm/source_code/results/: handshake_ecdh.csv  handshake_rsa.csv  steady_ecdh.csv  steady_rsa.csv  summary.csv
Group B/Quiz1/: AES Demo on Hardware (Pi 5 crypto Engine) vs Software (CPU).pptx  README.md  slides.pptx
Group B/Quiz1/benchmark/: Benchmark.md  benchmarks_combined.csv  parse_openssl.py  plot_benchmarks.py
Group B/Quiz1/demo/: README.md  main_cpu.rs  main_hw.rs
Group C/: Group C Quiz 1.pptx  README.md
Group C/Code/: README.md
Group C/Demo/: README.md
Group C/Documents/: README.md
Group C/Documents/raw_data/: Group C Quiz 1 Data.xlsx
Group C/Presentations/: README.md
Group C/Quiz 1/: Group C Quiz 1.pptx  README.md
Group C/Quiz 1/Documents/: DOCUMENTS.md
Group C/Quiz 1/raw_data/: README.md
Group C/final_project/: groupC_project_vision_Nov3.pptx  readme.md
Group C/midterm1/: Cargo.toml  GROUP_KEY_QUICKSTART.md  HW_ACCEL.md  QUICKSTART.md  readme.md  setup.sh
Group C/midterm1/.cargo/: config.toml
Group C/midterm1/crates/bench/: Cargo.toml
Group C/midterm1/crates/bench/src/: main.rs
Group C/midterm1/crates/crypto/: Cargo.toml
Group C/midterm1/crates/crypto/src/: lib.rs
Group C/midterm1/crates/metrics/: Cargo.toml
Group C/midterm1/crates/metrics/src/: lib.rs
Group C/midterm1/crates/stream/: Cargo.toml
Group C/midterm1/crates/stream/src/: display.rs  group_key.rs  main.rs  video.rs
Group C/midterm1/data/: Power Data.xlsx  power_data_2node.csv  power_data_3node.csv
Group C/midterm1/data/group_leader/: handshake_ecdh.csv  handshake_group.csv  power_samples.csv  readme.md  steady_stream.csv
Group C/midterm1/data/group_member/: handshake_ecdh.csv  power_samples.csv  steady_stream.csv
Group C/midterm1/scripts/: plot_results.py
Group D/: Readme.md
Group D/Joshua Deckman & Jack Pearson/: README.md  benchmarks.md
Group D/Joshua Deckman & Jack Pearson/benchmarks/: Makefile  bench-asm.sh  run-asm.c
Group D/Joshua Deckman & Jack Pearson/demo/: Cargo.toml  README.md  bench.sh  build.rs
Group D/Joshua Deckman & Jack Pearson/midterm/: Cargo.toml  HW_ACCEL.md  README.md
Group D/Joshua Deckman & Jack Pearson/midterm/data/: handshake_ecdh.csv  handshake_rsa.csv  handshake_rsa.csv.hwaccel  handshake_rsa.csv.noaccel  power_samples.csv  power_samples_handshake.csv  steady_stream.csv  steady_stream.csv.hwaccel  steady_stream.csv.noaccel
Group D/Joshua Deckman & Jack Pearson/midterm/scripts/: cdf.py  multi.py
Group D/Joshua Deckman & Jack Pearson/midterm/src/: main.rs  video.rs
Group E/: Group.txt  README.md  Readme.md
Group E/Benchmarks/: README.md  benchmarks.md  results.csv
Group E/Demo/: Makefile  README.md  aes_soft.c  aes_soft.h  af_alg_aes.c  bench  bench.c  plot.py  run_bench.sh
Group E/Midterm_01/: README.md
Group E/Midterm_01/Slides/: README.md
Group E/Quiz1/Benchmark/: Readme.md
Group E/Quiz1/CODES/: AES256GCM.py  READme.md  sha256.py
Group F/: README.md
Group F/Midterm 1/: HW_ACCEL.md  README.md
Group F/Midterm 1/Data/: handshake_ecdh.c  handshake_ecdh.csv  handshake_rsa.csv  power_samples.csv  steady_stream.csv
Group F/Midterm 1/Source Code/: Cargo.toml
Group F/Midterm 1/Source Code/src/: crypto.rs  frame.rs  group.rs  main.rs  metrics.rs  transport.rs  video.rs
Group F/Quiz 1/Demo/: link.txt
Group G/: README.md
Group G/Demo/: README
Group G/Presentation/: README
Group H/: README.md
Group H/Demo/: SHAonPi5usingISA.txt
Group H/Midterm1/Data/: handshake_ecdh.csv  (+3 more)
Group H/Midterm1/TEST/: Cargo.toml  HW_ACCEL.md  README.md
Group H/Midterm1/TEST/.cargo/: config.toml
Group H/Midterm1/TEST/benches/: bench_aesgcm.rs
Group H/Midterm1/TEST/scripts/: plot_energy.py
Group H/Midterm1/TEST/src/: aead.rs  keying.rs  lib.rs  main.rs  session.rs  video.rs
Group H/Midterm1/TEST/tests/: aed_roundtrip.rs  keying_ecdh.rs
Group I/: Readme.md
Group I/Benchmark/: 4301 Quiz 1 Benchmark.xlsx  Readme.md
Group I/DEMOs/: READme.md
Group I/Final_Project/: GroupI_Project_Vision_Nov3.pptx  Readme.md
Group I/MIDTERM/: Readme.md
Group I/MIDTERM/RSA_src/crates/app/: Cargo.toml
Group I/MIDTERM/RSA_src/crates/app/src/: main.rs
Group I/MIDTERM/RSA_src/crates/transport/: Cargo.toml
Group I/MIDTERM/RSA_src/crates/transport/src/: lib.rs
Group I/SRC_code/: Readme.md
(+127 files in other folders)
