# Workspace Configuration

[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Your Team"]

[workspace.dependencies]
# Crypto
aes-gcm = { version = "0.10", features = ["aes"] }
hkdf = "0.12"
sha2 = "0.10"
rand = "0.8"
getrandom = "0.2"
p256 = { version = "0.13", features = ["ecdh"] }
rsa = { version = "0.9", features = ["sha2"] }
x25519-dalek = "2.0"

# Async & networking
tokio = { version = "1", features = ["full"] }
bytes = "1"
quinn = "0.11"

# Video
gstreamer = "0.22"
gstreamer-app = "0.22"
gstreamer-video = "0.22"

# System metrics
sysinfo = { version = "0.30", features = ["multithread"] }
csv = "1.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utilities
anyhow = "1"
thiserror = "1"
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
hex = "0.4"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
strip = true
