[package]
name = "rpi-secure-stream"
version = "0.1.0"
edition = "2024"

[dependencies]
rsa = { version = "0.9", features = ["sha2"] }
sha2 = "0.10"
rand = "0.8"
getrandom = "0.2"
p256 = { version = "0.13", features = ["ecdh"] }
hkdf = "0.12"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1"
zeroize = "1"
aes-gcm = { version = "0.10", features = ["aes"] }
gstreamer = "0.22"
gstreamer-app = "0.22"
tokio = { version = "1", features = ["full"] }
bytes = "1"
[[bin]]
name = "leader_fanout"
path = "src/bin/leader_fanout.rs"







