[workspace]
members = ["keying", "metrics", "app"]
resolver = "2"

[workspace.dependencies]
aes-gcm = { version = "0.10", features = ["aes"] }
hkdf = "0.12"
sha2 = "0.10"
rand = "0.8"
getrandom = "0.2"
p256 = { version = "0.13", features = ["ecdh"] }
rsa = { version = "0.9", features = ["sha2"] }
tokio = { version = "1", features = ["full"] }
bytes = "1"
sysinfo = { version = "0.30", features = ["multithread"] }
csv = "1.3"
serde = { version = "1", features = ["derive"] }
gstreamer = "0.22"
gstreamer-app = "0.22"

