[package]
name = "ECE4301-midterm"
version = "0.1.0"
edition = "2024"

[dependencies]
aes-gcm = { version = "0.10.3", features = ["aes"] }
bytes = "1.10.1"
csv = "1.4.0"
getrandom = "0.3.4"
gobject-sys = "0.21.2"
gstreamer = "0.24.2"
gstreamer-app = "0.24.2"
hkdf = "0.12.4"
p256 = { version = "0.13.2", features = ["ecdh"] }
rand = "0.8.5"
rsa = { version = "0.9.8", features = ["sha2"] }
sha2 = "0.10.9"
sysinfo = { version = "0.37.2", features = ["multithread"] }
target-lexicon = "0.13.3"
clap = {version = "*", features = ["derive"]}
fstrings = "0.2.3"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
