[package]
name = "app"
version = "0.1.0"
edition = "2024"

[dependencies]
# pull these from the workspace root
gstreamer = { workspace = true }
gstreamer-app = { workspace = true }

# local (not in workspace root yet)
clap = { version = "4", features = ["derive"] }
anyhow = "1"

# (optional but handy if you use async later)
tokio = { workspace = true, optional = true }
bytes = { workspace = true, optional = true }

