[package]
name = "crypto"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
aes-gcm.workspace = true
hkdf.workspace = true
sha2.workspace = true
rand.workspace = true
getrandom.workspace = true
p256.workspace = true
rsa.workspace = true
anyhow.workspace = true
thiserror.workspace = true
hex.workspace = true

[lib]
name = "crypto"
path = "src/lib.rs"