[package]
name = "stream"
version.workspace = true
edition.workspace = true
authors.workspace = true

[[bin]]
name = "stream"
path = "src/main.rs"

[dependencies]
crypto = { path = "../crypto" }
metrics = { path = "../metrics" }
anyhow.workspace = true
tokio.workspace = true
bytes.workspace = true
clap.workspace = true
chrono.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
rand.workspace = true
sha2.workspace = true
rsa.workspace = true
aes-gcm = "0.10"
hex = "0.4"

# Optional: GStreamer support (uncomment when ready)
gstreamer.workspace = true
gstreamer-app.workspace = true
gstreamer-video.workspace = true