[package]
name = "app"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rpi-secure-stream"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
bytes = "1"
keying = { path = "../keying" }
transport = { path = "../transport" }
metrics = { path = "../metrics" }
video = { path = "../video" }